# stm32-cmake

./: README.md  compile.sh  flash.sh
cmake/: FindCMSIS.cmake
stm32-blinky/: CMakeLists.txt  stm32f4xx_hal_conf.h
stm32f4-led/: CMakeLists.txt  main.c
